# weekly-gen

./: .dockerignore  .gitignore  Archives_Issue_573_summary.md  Dockerfile  Makefile  README.md  cc.json  docker-compose.yml  frontendfoc.py  javascriptweekly.py  last_run_info.json  last_run_info.json.bak  main.py  nextjsweekly.py  nodeweekly.py  pyproject.toml  reactdigest.py  reactweekly.py  scrape_frontendfoc.py  scrape_javascriptweekly.py  scrape_nextjsweekly.py  scrape_nodeweekly.py  scrape_thisweekinreact.py  scrape_webtoolsweekly.py  thisweekinreact.py  webtoolsweekly.py
app/: __init__.py  scheduler.py  server.py
outputs/: 2025-04-12_frontendfoc_Archives_Issue_687_summary.md  2025-04-12_nextjsweekly_nextjsweekly_latest_issue_summary.md  2025-04-12_nodeweekly_Archives_Issue_573_summary.md  2025-04-12_reactdigest_reactdigest_one_weekly_email_summary.md  2025-04-12_thisweekinreact_thisweekinreact_summary.md  2025-04-12_webtoolsweekly_webtoolsweekly_612_Frameworks_Testing_Vue_Tools_summary.md  2025-04-19_frontendfoc_Archives_Issue_688_summary.md  2025-04-19_javascriptweekly_Archives_Issue_732_summary.md  2025-04-19_nextjsweekly_nextjsweekly_latest_issue_summary.md  2025-04-19_nodeweekly_Archives_Issue_574_summary.md  2025-04-19_reactdigest_reactdigest_one_weekly_email_summary.md  2025-04-19_reactweekly_Archives_Issue_425_summary.md  2025-04-19_thisweekinreact_thisweekinreact_summary.md  2025-04-19_webtoolsweekly_webtoolsweekly_613_RapydCloud_Review_JS_Libs_GitCLI_React_summary.md  2025-04-25_frontendfoc_Archives_Issue_689_summary.md  (+618 more)
scripts/: run-now.sh
(+39 files in other folders)
