[project]
name = "weekly-gen"
version = "0.1.0"
description = "FastAPI service + scheduler for weekly-gen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
]

[tool.uv]
package = false
